src/App.css
:root {
  --black-color: #0D0630;
  --background-color: transparent;
  --white-color: #f1f1f5;
}

body, html {
  margin: 0;
  padding: 0;
  font-weight: bold;
  background-color: transparent;
}

@media (max-width: 768px) {
  html {
    zoom: 0.7;
  }
}

.App {
  text-align: center;
  height: 100vh;
  margin: 0;
  padding: 0;
}

.navigation-menu {
  background-color: var(--white-color);
}

button,input {
  border: none;
  margin: 1px;
  border-radius: 2px;
  font-size: large;
  color: white;
  text-align: center;
}

li {
  list-style: none;
  margin-right: 5%;
  border-radius: 5px;
  padding:5px
}

button {
  background-color: var(--black-color);
}

a {
  text-decoration: none;
  color:var(--black-color);
  font-size: small;
}

